--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
             <a href="#contact" class="nav-link" role="menuitem">Contact</a>
           </li>
           <li class="nav-item" role="none">
-            <a href="login.html" class="nav-link login-btn" role="menuitem">Logout</a>
+            <a href="index.html" class="nav-link login-btn" role="menuitem">Logout</a>
           </li>
         </ul>
         <button class="hamburger" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="nav-menu">
